# gym-tracker

./: .gitignore  Cargo.toml  Crux.toml  README.md
database/: DATABASE_DESIGN.md  _gym-track.sql  drop_tables.sql  init_db.sql  print_all_tables.sql
database/queries/: README.md
database/queries/exercises/: add_new_exercise.sql  count_exercises.sql  get_all_exercises.sql  get_exercises_by_id.sql  get_exercises_by_muscle_group.sql
database/queries/progress-tracking/: delete_progress_entry.sql  get_progress_for_exercise.sql  get_progress_for_user.sql  log_user_progress.sql  update_progress_entry.sql
database/queries/users/: get_user_current_program.sql  get_user_profile.sql  update_user_profile.sql  user_authentication.sql  user_registration.sql
database/queries/workout-programs/: add_program_splits.sql  create_new_program.sql  delete_program.sql  get_all_programs.sql  get_program_by_id.sql  get_program_exercises.sql  get_program_splits.sql  update_program.sql
database/queries/workout-tracking/: delete_workout_exercise.sql  get_all_workouts_user.sql  get_exercises_for_a_workout.sql  get_workout_by_id.sql  (+3 more)
database/schema/: add_comments.sql  add_constraints.sql  add_indexes.sql  exercises.sql  exercises_muscles.sql  muscles.sql  programs.sql  programs_exercises.sql  programs_split.sql  programs_splits.sql  progress_tracking.sql  users.sql  users_programs.sql  workouts.sql  workouts_exercises.sql
database/seeds/: exercise_workouts_seed.sql  exercises_muscles_seed.sql  exercises_seed.sql  muscles_seed.sql  programs_exercises_seed.sql  programs_seed.sql  programs_split_seed.sql  programs_splits_seed.sql  progress_tracking_seed.sql  users_programs_seed.sql  users_seed.sql  workouts_exercises_seed.sql  workouts_seed.sql
gym_track_app/: Cargo.toml
gym_track_app/src/: errors.rs  handlers.rs  main.rs  models.rs  routes.rs
gym_track_app/src/dbaccess/: exercises.rs  mod.rs
gym_track_app/src/handlers/: exercises_handler.rs  mod.rs  muscles_handler.rs  programs_handler.rs  progress_tracking_handler.rs  users_handler.rs  workouts_handler.rs
gym_track_app/src/models/: exercises_muscles.rs  mod.rs  programs.rs  progress_tracking.rs  types.rs  users.rs  workout.rs
gym_track_app/src/tests/: exercises_handler_test.rs
server/: Cargo.toml  README.md  config.toml
shared/: uniffi.toml
shared/src/: app.rs  lib.rs
shared_types/: Cargo.toml  build.rs
web/: Cargo.toml  README.md  index.html
web/src/: core.rs  http.rs  main.rs  sse.rs
(+12 files in other folders)
