[package]
name = "gym_track_app"
version = "0.1.0"
edition = "2021"

[dependencies]
crux_core = "0.7"
crux_http = "0.9"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7.4", features = ["postgres", "macros"] }
serde = { version = "1.0", features = ["derive"] }
actix-rt = "2.5"
actix-web = "4.0"
dotenv = "0.15"
chrono = "0.4"
