[package]
name = "shared_types"
version = "0.1.0"
authors.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
anyhow = "1.0"

[build-dependencies]
anyhow.workspace = true
crux_core = { workspace = true, features = ["typegen"] }
shared = { path = "../shared", features = ["typegen"] }
